The web user login is added.

--- a/package/system/rpcd/files/rpcd.config
+++ b/package/system/rpcd/files/rpcd.config
@@ -8,3 +8,9 @@ config login
 	list read '*'
 	list write '*'
 
+config login
+	option username 'mixtile'
+	option password '$p$mixtile'
+	list read '*'
+	list write '*'
+
