--- a/package/network/services/dnsmasq/files/dhcp.conf
+++ b/package/network/services/dnsmasq/files/dhcp.conf
@@ -31,3 +31,13 @@ config dhcp lan
 config dhcp wan
 	option interface	wan
 	option ignore	1
+
+config dhcp 'eth_pci'
+	option interface 'eth_pci'
+	option start '2'
+	option limit '150'
+	option leasetime '12h'
+	option ra 'server'
+	option ra_slaac '0'
+	option dhcpv4 'server'
+	option dhcpv6 'server'
