1, modify the compilation output file name 2. Add the sshpass tool 3, add blade3 shutdown power off 4. Update the miop driver 5. Cancel check_extroot when extroot is used 6. Cancel firewall defaults forward

--- a/package/system/fstools/Makefile
+++ b/package/system/fstools/Makefile
@@ -22,7 +22,7 @@ PKG_LICENSE_FILES:=
 
 PKG_BUILD_FLAGS:=no-mips16
 PKG_FLAGS:=nonshared
-
+EXTRA_CFLAGS += -Wno-unused-function
 PKG_BUILD_DEPENDS := util-linux
 PKG_CONFIG_DEPENDS := CONFIG_NAND_SUPPORT CONFIG_FSTOOLS_UBIFS_EXTROOT
 
